--- a/styles.css
+++ b/styles.css
@@ -8,21 +8,22 @@
 }
 
 .smallbox{
-  flex: 1;
-  width: 3em;
-  border: 1px solid green;
-  padding: 50px;
-  margin: 20px;
-}
+    flex: 1.5;
+    width: 3em;
+    border: 1px solid green;
+    padding: 50px;
+    margin: 10px;
+  }
 
 .largebox{
   flex: 3;
-  width: 3em;
+  width: 3px;
   border: 1px solid green;
   padding: 50px;
-  margin: 20px;
+  margin: 10px;
     
 }
+
 #horizontal{
     height: 100px;
 }
