--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 
 .largebox{
   flex: 3;
-  width: 3px;
+  width: 3em;
   border: 1px solid green;
   padding: 50px;
   margin: 10px;
@@ -29,5 +29,7 @@
 }
 #vertical{
     flex: 1;
+    width: 3em;
+    border: 1px solid green;
     height: 600px;
 }
